# PulseCheck

.github/: pull_request_template.md
backend/: .env.example  .gitignore  Makefile  auth.py  docker-compose.test.yaml  docker-compose.yaml  exceptions.py  logger_setup.py  main.py  models.py  pyproject.toml  pytest.ini  schemas.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: auth.py  monitor.py  ping_history.py  protected.py  router.py  workspace.py
backend/app/core/: auth.py  celery_app.py  exceptions.py  logger_setup.py  seed.py
backend/app/db/: database.py
backend/app/models/: monitor.py  ping_history.py  user.py  workspace.py
backend/app/schemas/: monitor.py  ping_history.py  user.py  workspace.py
backend/app/services/: monitor_service.py  workspace_service.py
backend/app/tasks/: alert_tasks.py  ping_tasks.py
backend/models/: monitor.py  ping_history.py  user.py  workspace.py
backend/routers/: auth.py  monitor.py  ping_history.py  protected.py  workspace.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_routes.py  test_monitor.py  test_ping_history.py  test_protected_routes.py  test_workspace.py
backend/tests/unit/: test_auth.py
docs/: CONTRIBUTING.md  ERD.md  HLD.md  PRD.md
frontend/: package-lock.json
frontend/src/: App.css  App.js  AuthForm.css  AuthForm.jsx  LoginForm.css  LoginForm.jsx  ProtectedRoute.jsx  index.css
